src/test/examples/custom/valid/class/canUseIfStatementsInClassFunction.wacc
# Class functions can be called inside other class functions
# Expected output:
# 3

begin
  class H is
    public int v
    private int J(int i, bool x) is
       if x
   	then
         return i
        else
         return 0
       fi
    end
    public int f() is
       int y = 3;
       int k = call J(5, false) ;
       v = k+y ;
       return v
    end
  end
  H v = new H(2) ;
  int k = call v.f() ;
  println k
end
